fix overflow slider on targethud

--- a/src/main/resources/assets/minecraft/slice/html/hud/targethud/styles.css
+++ b/src/main/resources/assets/minecraft/slice/html/hud/targethud/styles.css
@@ -14,6 +14,10 @@
     left: 67.5%;
 }
 
+body {
+    overflow: hidden;
+}
+
 progress {
     display: flex;
     flex-direction: column;
